admission/ValidatingAdmissionPolicy/policies/selinux-user/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-user-pod
  annotations:
    kubeapt.io/uuid: "2d1a986b-a524-422b-83b0-aafe9cd95f55"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    seLinuxOptions:
      user: user_u
